# FBX_Exporter

./: .gitignore  CMakeLists.txt  README.md  csv2ddb_dda.py  dd_entity_map.txt
include/: DD_Container.h  FBX_MeshFuncs.h  FBX_Utility.h
meshes/: Soldier_jump_fix.fbx  dancing_girl.fbx  hit_dude.fbx  sit_r_1.fbx  soldier.7z
source/: FBX_MeshFuncs.cpp  FBX_Utility.cpp  FBXmain.cpp
